# cn_chess_ai

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: action.h  chessai.h  chessboard.h  dqn.cuh  dqn.h  mainwindow.h
src/: chessai.cpp  chessboard.cpp  dqn.cpp  dqn.cu  mainwindow.cpp
